# bqjdbc-crawler

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hook.yaml  AGENTS.md  README.md  crawler.go  crawler.py  crawler_test.go  download_history.txt  go.mod  pyproject.toml
.github/: copilot-instructions.md  dependabot.yaml
.github/instructions/: docs.instructions.md  go.instructions.md
.github/workflows/: crawler.yaml  go.yml
downloads/: .gitignore
