[project]
name = "bqjdbc-crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "httpx>=0.28.1",
    "structlog>=25.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.4",
]


[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select  = ["I", "E", "W", "F", "UP", "B", "PL"]
fixable = ["I", "E", "W", "F", "UP", "B", "PL"]

ignore = ["E741", "PLR2004"]

[tool.ruff.format]
#quote-style = "double"